[gd_scene load_steps=7 format=3 uid="uid://b5u2yv4sdnxsk"]

[ext_resource type="Script" path="res://source/widget/w_item_slot.gd" id="1_3foy4"]
[ext_resource type="Texture2D" uid="uid://c4s24uauaeqk" path="res://assets/textures/widgets/menus/panel_slot.tres" id="2_tqx2q"]
[ext_resource type="PackedScene" uid="uid://db1yga2r1uwws" path="res://source/widget/w_item_tile.tscn" id="3_r3cff"]
[ext_resource type="Texture2D" uid="uid://760ril51ydlm" path="res://assets/textures/widgets/menus/selector_01.tres" id="4_4y65p"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_dtgrb"]

[sub_resource type="SystemFont" id="SystemFont_nvhmx"]
font_names = PackedStringArray("SimSun")

[node name="item_slot" type="Control"]
custom_minimum_size = Vector2(32, 32)
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
size_flags_vertical = 3
script = ExtResource("1_3foy4")
metadata/_edit_use_custom_anchors = true

[node name="bg" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2_tqx2q")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
metadata/_edit_lock_ = true

[node name="w_item_tile" parent="." instance=ExtResource("3_r3cff")]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -14.0
offset_right = 18.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
metadata/_edit_layout_mode = 1

[node name="img_invalid" type="TextureRect" parent="."]
offset_right = 32.0
offset_bottom = 32.0
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="selected" type="NinePatchRect" parent="MarginContainer"]
offset_left = 2.0
offset_top = 2.0
offset_right = 30.0
offset_bottom = 30.0
texture = ExtResource("4_4y65p")
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="lab_key" type="Label" parent="."]
material = SubResource("CanvasItemMaterial_dtgrb")
offset_left = 2.0
offset_top = 2.0
offset_right = 10.0
offset_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = SubResource("SystemFont_nvhmx")
text = "+"
